Add entry detail page

--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -5,7 +5,4 @@
   <script src="/bundle.js" async></script>
 </head>
 <body>
-    <div id=page data-controller="page" data-page-state="initial" class="container">
-        Loading page...
-    </div>
-</body>
+    <div id=page data-controller="page" class="container">
