--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <meta name="turbolinks-root" content="/app">
   <script src="/bundle.js" async></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+   crossorigin=""/>
 </head>
 <body>
     <div id=page data-controller="page" class="container">
